--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express.io": "~1.1.13",
     "swig": "~1.3.0",
     "passport": "~0.1.18",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "connect-redis": "~1.4.6"
   }
 }
