--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "minichat-node",
   "version": "0.0.1",
+  "main": "web.js",
   "dependencies": {
     "express": "~3.4.8",
     "express.io": "~1.1.13",
@@ -8,6 +9,10 @@
     "passport": "~0.1.18",
     "underscore": "~1.5.2",
     "connect-redis": "~1.4.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kurkop/minichat-node.git"
   },
   "keywords": [
     "minichat-node",
