--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "underscore": "~1.5.2",
     "connect-redis": "~1.4.6"
   },
+  "scripts": {
+  "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/kurkop/minichat-node.git"
@@ -22,5 +25,5 @@
   "license": "BSD",
   "engines": {
     "node": "0.10.23"
-  },
+  }
 }
