--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "swig": "~1.3.0",
     "passport": "~0.1.18",
     "underscore": "~1.5.2",
-    "connect-redis": "~1.4.6"
+    "connect-redis": "~1.4.6",
+    "dotenv": "~0.2.3"
   },
   "scripts": {
-  "start": "node server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
