Se añade soporte a redis en Heroku

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REDISTOGO_URL = "redis://redistogo:5b61c77a6f8482e36e2da514da485e6b@crestfish.redistogo.com:11119/"
+REDISTOGO_URL = "redis://redistogo:<5b61c77a6f8482e36e2da514da485e6b>@crestfish.redistogo.com:<11119>/"
